Criada o formulário das reservas

--- a/Programação para Internet I/Trab 01/hospedagem.html
+++ b/Programação para Internet I/Trab 01/hospedagem.html
@@ -35,8 +35,8 @@
             <tr>
                 <th>Quartos</th>
                 <th>Características</th>
-                <th>Preço Casal</th>
-                <th>Preço Individual</th>
+                <th width="100">Preço Casal</th>
+                <th width="100">Preço Individual</th>
             </tr>
             <tr>
                 <td><img src="Luxo.jpg" alt="Imagem quarto de luxo" id="Luxo"></td>
