--- a/Programação para Internet I/Trab 01/reserva.html
+++ b/Programação para Internet I/Trab 01/reserva.html
@@ -34,37 +34,52 @@
         <fieldset>
             <legend>Preencha a sua reserva:</legend>
             <form>
-                <p>
-                    <label for="nome">Nome:</label>
-                    <input type="text" id="nome" required>
-                </p>
-                <p>
-                    <label for="telefone">Telefone:</label>
-                    <input type="tel" id="telefone" required>
-                </p>
-                <p>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" required>
-                </p>
-                <p>
-                    <label for="quarto">Quarto:</label>
-                    <select id="quarto">
-                        <option value="luxo">Luxo</option>
-                        <option value="luxoespecial">Luxo Especial</option>
-                        <option value="luxoconjugado">Luxo Conjugado</option>
-                    </select>
-                </p>
-                <p>
-                    <label for="modelo">Modelo:</label>
-                    <select id="modelo">
-                        <option value="individual">Individual</option>
-                        <option value="casal">Casal</option>
-                    </select>
-                </p>
-                <p>
-                    <label for="Data">Telefone:</label>
-                    <input type="tel" id="telefone" required>
-                </p>
+                <div>
+                    <p>
+                        <label for="nome">Nome Completo</label>
+                        <input type="text" id="nome" required>
+                    </p>
+                    <p>
+                        <label for="telefone">Telefone</label>
+                        <input type="tel" id="telefone" required>
+                    </p>
+                    <p>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" required>
+                    </p>
+                    <p>
+                        <label for="Cupom">Cupom de Desconto</label>
+                        <input type="text" id="cupomDesconto">
+                    </p>
+                    <button type="submit" id="buttonEnviar">Enviar</button>
+                    <button type="reset" id="buttonLimpar">Limpar</button>
+                </div>
+
+                <div>
+                    <p>
+                        <label for="quarto">Quarto</label>
+                        <select id="quarto">
+                            <option value="luxo">Luxo</option>
+                            <option value="luxoespecial">Luxo Especial</option>
+                            <option value="luxoconjugado">Luxo Conjugado</option>
+                        </select>
+                    </p>
+                    <p>
+                        <label for="modelo">Modelo</label>
+                        <select id="modelo">
+                            <option value="individual">Individual</option>
+                            <option value="casal">Casal</option>
+                        </select>
+                    </p>
+                    <p>
+                        <label for="Data">Data Inicial</label>
+                        <input type="date" id="dataInicial" required>
+                    </p>
+                    <p>
+                        <label for="Data">Data Final</label>
+                        <input type="date" id="dataFinal" required>
+                    </p>
+                </div>
             </form>
         </fieldset>
     </article>
